# WorldCache

./: .gitattributes  .gitignore  .pytest.ini  ATTRIBUTIONS.md  README.md  checkpoints  justfile  plot_latency_reduction.py  pyproject.toml
Evaluation/PAI-Eval/: README.md  evaluate.py  evaluate_vqa.py  pyproject.toml
Evaluation/PAI-Eval/cosmos_eval_jsons/: av_0b82886b-be71-49f9-83a3-346bc0134c4b.json  av_0d9d4977-4944-4ec3-a784-86c34f2fa897.json  av_16b04921-6c87-4f5b-9c06-f56364e9c87a.json  av_1aab097c-2b50-4b60-8104-b1e6727b7615.json  av_1f93fbc0-7dae-40ca-8570-3de34f00f2c2.json  av_1ff8aea6-13ec-49c9-877d-54f287179065.json  av_3964e5dd-6704-4e3b-896f-dd8059731b27.json  av_3f748a97-5a86-4311-a099-c2d1bd1e5fb1.json  av_5da7e548-93f4-4a9f-b59d-418051e7c859.json  av_5f567f79-4dd0-413d-a81a-2607684decf2.json  av_69c37938-8eb3-4234-a708-03d55db9aacc.json  av_8424d9ae-633f-4d72-90a4-18e9457ebd90.json  av_8d8858fa-9cb7-413b-8b28-43e814c78156.json  av_99ed9edb-10f2-40a8-bb51-71c744632b89.json  av_aae070a9-7998-4070-9ff2-2fb6dc94069f.json  av_animal_dear_1_0.json  av_ba361e3c-bea8-48c0-b92a-33e00bc7fe55.json  av_be5defe3-53da-41d3-933c-ee03b44bcaf7.json  av_bridge_tunnel_1_0.json  av_c135ea08-213e-4533-b55b-3bb776cdf345.json  av_c6a93dd9-65c6-4c1c-8e69-8db57c27b0ce.json  av_d5eb364d-0d7e-4295-a1c1-972080c7d8fe.json  av_dc14df7f-b671-4d66-a98b-b751d8112e6c.json  av_ec2fb4fa-3530-4a6a-b431-f06779a0537a.json  av_f7247d16-f2db-4807-9e49-b5141861f6cf.json  av_motorcycle_1_0.json  av_sprinkler_1_0.json  common_sense_06fbad19-a061-48a7-b0ee-c2be28b30528.json  common_sense_071c7452-afc7-4dd7-99af-ee9668572af7.json  common_sense_0ac2a3a9-3eed-481f-926a-9f74de46bd0b.json  common_sense_13561d53-45e7-44c9-ae6e-adddcf31976d.json  common_sense_18772107-30c0-4c29-add5-0f3e4dc8ce3d.json  common_sense_1e65b97e-a2dd-4413-92df-0aeccf1d21bf.json  common_sense_1fcfec3f-53e4-4fd1-817a-28c137c706f5.json  common_sense_22406425-dcc9-4b21-a622-992d5866d39a.json  common_sense_24d33096-69c7-4199-b57a-958d366a5a71.json  common_sense_27b06fe9-6ffd-4c4e-92cb-f19f5c783d3a.json  common_sense_287188dc-ce0c-4ab7-8364-4a2bfb015c1c.json  common_sense_3092507f-b59a-4948-9da4-9e7541001f45.json  common_sense_372320dc-f561-4a5c-a607-48edc049b9a4.json  (+228 more)
Evaluation/PAI-Eval/cosmos_eval_jsons_text_only/: av_0e77b38f-59d9-4e66-ba1e-e3d40c572060.json  av_16b04921-6c87-4f5b-9c06-f56364e9c87a.json  av_1cd2d3bd-6198-467f-83c9-4b12e5af1235.json  av_3174082c-b0a4-44f8-87c0-b2eead522d75.json  av_3964e5dd-6704-4e3b-896f-dd8059731b27.json  av_482698a8-ddba-420c-be4b-cf029a7aaead.json  av_495a2486-d039-46f9-86fd-4fdf8ec4ce24.json  av_4b8f4171-c3ae-4648-a796-7cbd4cf36625.json  av_62f91bb7-d292-4785-b9a0-99d6fd546bf0.json  av_6fa7204a-8d92-444a-8f23-e6eba7078568.json  av_71b7b01a-7fab-4cae-a780-8c58c3a37ae1.json  av_99ed9edb-10f2-40a8-bb51-71c744632b89.json  av_9f3a2fd3-07e2-494a-9477-1e254ab2694e.json  av_9f986144-dec3-490d-8c44-aed3a2727413.json  av_a399fcf9-bad5-4095-9600-d04420ac716b.json  av_accident_2_0.json  av_accident_2_1.json  av_b9a09222-114b-4bde-aa34-ca0828f3bd16.json  av_bridge_tunnel_1_1.json  av_c6a93dd9-65c6-4c1c-8e69-8db57c27b0ce.json  av_cbf12e70-0268-42c2-bd91-c76d42a86102.json  av_d4a6ebbf-041d-4228-8102-372d746e3870.json  av_d9dab3fb-9b1e-4627-83c3-533fca9dcc92.json  av_da2cfe87-9674-4463-a913-7623f68e16fa.json  av_dc14df7f-b671-4d66-a98b-b751d8112e6c.json  av_ed7a0ed5-76e6-4e97-95f3-9078d4200cc4.json  common_sense_062f7b4e-1f09-4a1e-9f1a-5c531c9e2155.json  common_sense_07030deb-fdc3-4ca8-8d59-eb97eea8437e.json  common_sense_138a23f7-6f27-4122-b665-e0a90d7569c7.json  common_sense_179bbc45-c0b9-4e90-a047-e06a6b52dad8.json  common_sense_257c7306-0bdb-4672-a3be-f5fe35835094.json  common_sense_3bc5310a-d23a-4212-81e7-a548fd3f826d.json  common_sense_3c9f0af7-5543-43d1-ae2b-be2c818242c7.json  common_sense_461b2a96-4590-4b0f-ac48-1c6e8630ebd6.json  (+213 more)
(+2147 files in other folders)
