# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cosmos-predict2"
dynamic = ["version"]
authors = [
  {name = "NVIDIA Corporation"},
]
description = "Cosmos Predict2 World Foundation Model"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "cosmos-oss==0.1.0",
]

[project.optional-dependencies]
gradio = ["cosmos-oss[gradio]"]
cu128 = ["cosmos-oss[cu128_torch27]"]
cu130 = ["cosmos-oss[cu130_torch29]"]

[dependency-groups]
dev = ["cosmos-oss[dev,gradio]"]

[project.readme]
content-type = "text/markdown"
text = '''
# Cosmos-Predict2

[Documentation](https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md)
'''

[project.urls]
documentation = "https://github.com/nvidia-cosmos/cosmos-predict2/blob/main/README.md"
homepage = "https://research.nvidia.com/labs/dir/cosmos-predict2"
issues = "https://github.com/nvidia-cosmos/cosmos-predict2/issues"
repository = "https://github.com/nvidia-cosmos/cosmos-predict2"

[tool.uv]
conflicts = [
  [{extra = "cu128"}, {extra = "cu129"}, {extra = "cu130"}],
]
override-dependencies = ["numpy>=2.0.0"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
cosmos-oss = [{ workspace = true }]

[tool.hatch.version]
path = "cosmos_predict2/__about__.py"

[tool.hatch.build.targets.sdist]
packages = [
  "cosmos_predict2",
]

[tool.hatch.build.targets.wheel]
packages = [
  "cosmos_predict2",
]
exclude = [
  "*_test.py",
]
